# qsip

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  demo.py  pyproject.toml  requirements-dev.txt  requirements-native.txt  requirements.txt  serve.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
scripts/: build_liboqs_wsl.sh
src/: __init__.py
src/ca/: __init__.py  authority.py  certificate.py  handshake.py
src/cli/: __init__.py  main.py
src/common/: __init__.py  config.py  exceptions.py
src/crypto/: __init__.py  hybrid.py  kem.py  signatures.py
src/dns/: __init__.py  resolver.py  validator.py
src/email/: __init__.py  composer.py  encryptor.py  transport.py
src/httpq/: __init__.py  client.py  connection.py  protocol.py  server.py
src/identity/: __init__.py  credential.py  keypair.py  revocation.py  zk_proof.py
src/web/: __init__.py  server.py
src/web/static/: index.html
tests/: _oqs_mock.py  conftest.py  test_ca.py  test_cli.py  test_crypto.py  test_dns.py  test_email.py  test_httpq_socket.py  test_identity.py  test_property.py
